Updated documentation for 0.9 release